# ios-to-android-migration-assitant-agent

./: .env.template  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  TESTING_GUIDE.md  TEST_INSTRUCTIONS.md  activate.sh  claude-code-instructions-v2.md  old.CLAUDE.md.backup  requirements.txt
docs/: AGENT_TESTING_PLAN.md  CLAUDE_DESKTOP_CONFIG.md
mcp-tools/photo-migration/: .env.example  .gitignore  MCP_TOOLS_DOCUMENTATION.md  PHASE3_COMPLETE.md  README.md  TEST_INSTRUCTIONS.md  TEST_VALIDATION_GUIDE.md  TRANSFER_CONFIRMATION_FLOW.md  pyproject.toml  record_flow.py  record_google_login_steps.py  test_client.py
mcp-tools/photo-migration/src/photo_migration/: gmail_monitor.py  google_dashboard_client.py  icloud_client.py  icloud_transfer_workflow.py  logging_config.py  server.py
mcp-tools/photo-migration/tests/: check_progress.py  test_basic_auth.py  test_mcp_server.py  test_migration_flow.py  test_migration_flow_simple.py  test_migration_flow_simple_readonly.py
mcp-tools/photo-migration/utils/: clear_sessions.py
mcp-tools/web-automation/: .gitignore  README.md  TESTING_NOTES.md  pyproject.toml
mcp-tools/web-automation/src/web_automation/: browser_manager.py  google_dashboard_client.py  google_storage_client.py  icloud_client.py  icloud_transfer_workflow.py  logging_config.py  server.py
mcp-tools/web-automation/tests/: check_progress.py  test_basic_auth.py  test_google_storage.py  test_icloud_db.py  test_mcp_server.py  test_migration_flow.py  test_migration_flow_simple.py  test_migration_flow_simple_readonly.py  test_storage_progress.py
scripts/: clear_google_tokens.py  clear_sessions.py  launch_demo_browser.sh  migration_status.py  setup_database.py  setup_google_session.py  test_gmail_api.py  test_photo_migration_env.py  test_shared_infrastructure.py
shared/: __init__.py
(+80 files in other folders)
